welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:48: error: not found: value chercherEtPoser
chercherEtPoser()
^